# writefreely-to-sqlite

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: fixture-auth.json  fixtures.py  test_cli.py  test_client.py  test_service.py
writefreely_to_sqlite/: cli.py  client.py  service.py
