[tool.poetry]
name = "writefreely-to-sqlite"
version = "0.1.0"
description = "Save data from WriteFreely (or Write.as) to a SQLite database."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "writefreely_to_sqlite"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
click = "^8.1.3"
sqlite-utils = "^3.30"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
responses = "^0.22.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
types-requests = "^2.28.11.7"
ipython = "^8.10.0"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
writefreely-to-sqlite = "writefreely_to_sqlite.cli:cli"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
