[tool.poetry]
name = "writefreely-to-sqlite"
version = "0.1.0"
description = "Save data from WriteFreely (or Write.as) to a SQLite database."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "writefreely_to_sqlite"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.2"
sqlite-utils = "^3.30"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipython = "^8.10.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
responses = "^0.22.0"
ruff = "^0.0.256"
types-requests = "^2.28.11.7"

[tool.poetry.scripts]
writefreely-to-sqlite = "writefreely_to_sqlite.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
